feat(fruit-api): adds fruit apis
