# src/server.ts
@@ -5,6 +5,7 @@ import fs from 'fs'
 import YAML from 'yaml'
 import todoRouter from './todo/todo.router'
 import { GithubUser } from './middleware/github-username.middleware'
+import { router as fruitRouter} from './fruit/fruit.router';
 
 const app: Express = express()
 
@@ -21,5 +22,6 @@ app.get('/', (_req: Request, res: Response) => {
 })
 
 app.use('/:username/todo', GithubUser, todoRouter)
+app.use('/fruits', fruitRouter)
 
 export default app
